# ejercicio_1

./: CMakeLists.txt  main.cpp
Fruta/: Fruta.cpp  Fruta.h
Lacteo/: Lacteo.cpp  Lacteo.h
Limpieza/: Limpieza.cpp  Limpieza.h
NoPerecible/: NoPerecible.cpp  NoPerecible.h
Producto/: Producto.cpp  Producto.h
